--- a/index7.html
+++ b/index7.html
@@ -14,7 +14,7 @@
 <script src="js/acciones.js" type="text/javascript"></script>
 <script src="phonegap.js"></script><!--necesario*/-->
 
-</header>
+</head>
 <body>
 <div data-role="page" id="principal" data-theme="a">
 <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
