--- a/index7.html
+++ b/index7.html
@@ -5,7 +5,7 @@
 <title>Mostrar apps</title>
 <!--grupo css-->
 <link rel="stylesheet" href="css/temaapp7.min.css"/>
-<link rel="stylesheet" href="jquery.mobile.icons.min.css"/>
+<link rel="stylesheet" href="css/jquery.mobile.icons-1.4.5.min.css"/>
 <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css"/>
 
 <!--grupo js-->
