--- a/index7.html
+++ b/index7.html
@@ -25,17 +25,29 @@
 <div style="width:50%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="a">
 <li class="ui-first-child ui-last-child">
-<a href="index1.html" target="_self" data-role="button">
+<a href="paginas a llamar/index1.html" target="_self" data-role="button">
 <h2>app1 Datos del dispositivo </h2>
 </a>
 </li>
+</ul>
+</div>
+</div>
+<div data-role="main" class="ui-content" align="center">
+<div style="width:50%;">
+<ul data-role="controlgroup" data-type="vertical" data-theme="a">
 <li class="ui-first-child ui-last-child">
-<a href="index5.html" data-role="button" target="_self">
+<a href="paginas a llamar/index5.html" data-role="button" target="_self">
 <h2>app5 Vibrar </h2>
 </a>
 </li>
+</ul>
+</div>
+</div>
+<div data-role="main" class="ui-content" align="center">
+<div style="width:50%;">
+<ul data-role="controlgroup" data-type="vertical" data-theme="a">
 <li class="ui-first-child ui-last-child">
-<a href="index6.html" data-role="button" target="_self">
+<a href="paginas a llamar/index6.html" data-role="button" target="_self">
 <h2>app6 Deslizar </h2>
 </a>
 </li>
